fix(elements|ino-input): fix too large number arrows

--- a/packages/elements/src/components/ino-input/ino-input.scss
+++ b/packages/elements/src/components/ino-input/ino-input.scss
@@ -156,7 +156,7 @@ ino-input {
       height: 50%;
 
       .ino-num-arrows {
-        --height: 5px;
+        --ino-icon-height: 5px;
         padding: 2px 0;
         cursor: pointer;
 
